# betagen-backend

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml
betagen_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/app/: main.py
src/app/api/: deps.py  routes.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: __init__.py  analysis.py  climbs.py  jobs.py  videos.py
src/app/core/: config.py
src/app/models/: __init__.py  base_model.py  registry.py
src/app/models/pose/: __init__.py  mediapipe_model.py  openpose_model.py
src/app/pipelines/: video_processor.py
src/app/schemas/: analysis.py  pose.py
src/app/services/: analyzer.py  job_manager.py
src/betagen_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_health.py  test_video_api.py
